--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,6 @@
     <color name="gray">#F4F4F4</color>
     <color name="orange">#FF8F00</color>
     <color name="blue">#1565C0</color>
+    <color name="green">#009688</color>
+    <color name="red">#F44336</color>
 </resources>
